HT3_Solar_second.png added

--- a/HT3/sw/etc/html/index.html
+++ b/HT3/sw/etc/html/index.html
@@ -29,5 +29,6 @@ window.onload = function()
    <BR>
    <IMG src="./HT3_Solar.png" alt="Solar">
    <IMG src="./HT3_Solarertrag.png" alt="Solarertrag">
+   <IMG src="./HT3_Solar_second.png">
  </BODY>
 </HTML>
