--- a/HT3/sw/etc/html/index.html
+++ b/HT3/sw/etc/html/index.html
@@ -19,7 +19,7 @@ window.onload = function()
 </HEAD>
  <BODY>
    <IMG src="./HT3_Heizgeraet.png" alt="Heizgeraet">
-   <IMG src="./HT3_Warmwasser.png" alt="Warmasser">
+   <IMG src="./HT3_Warmwasser.png" alt="Warmwasser">
    <BR>
    <IMG src="./HT3_Heizkreis1.png" alt="Heizkreis1">
    <IMG src="./HT3_Heizkreis2.png">
