--- a/HT3/sw/etc/html/HT3-Bus_Telegramme.html
+++ b/HT3/sw/etc/html/HT3-Bus_Telegramme.html
@@ -101,14 +101,14 @@
 	</tr>
 	<tr>
 		<td height="20" align="left"><b>Datum:</b></td>
-		<td align="left" sdnum="1031;0;TT.MM.JJJJ"><b>2023.10.06</b></td>
+		<td align="left" sdnum="1031;0;TT.MM.JJJJ"><b>2023.11.08</b></td>
 		<td align="left"><br></td>
 		<td align="left"><b><br></b></td>
 		<td align="left"><b><br></b></td>
 	</tr>
 	<tr>
 		<td height="20" align="left"><b>Version:</b></td>
-		<td align="left"><b>0.7.0</b></td>
+		<td align="left"><b>0.7.1</b></td>
 		<td align="left"><br></td>
 		<td align="left"><b><br></b></td>
 		<td align="left"><b><br></b></td>
@@ -697,6 +697,10 @@
 	<tr>
 		<td height="20" align="left">0.7.0 / 2023.10.06</td>
 		<td align="left" sdnum="1031;0;@">Solarmessages updated, ID’s:856, 898, 986 added.</td>
+	</tr>
+	<tr>
+		<td height="20" align="left">0.7.1 / 2023.11.08</td>
+		<td align="left" sdnum="1031;0;@">ID: 866_22_0 now assigned to TS8</td>
 	</tr>
 </table>
 <!-- ************************************************************************** -->
@@ -10944,7 +10948,7 @@
 	<tr>
 		<td height="20" align="center" bgcolor="#E6E6FF" sdval="28" sdnum="1031;">28</td>
 		<td align="left" valign=bottom bgcolor="#E6E6E6" sdnum="1031;0;@"><font size=1>Hi-Byte</font></td>
-		<td rowspan=2 align="left" valign=middle bgcolor="#CCCCCC" sdnum="1031;0;@">Solar Option G: Temp behind mixer ‚TS4‘</td>
+		<td rowspan=2 align="left" valign=middle bgcolor="#CCCCCC" sdnum="1031;0;@">Solar Option G: Heating Circuit Return-Temperatur  ‚TS8‘</td>
 		<td rowspan=2 align="left" valign=middle>866_22_0</td>
 	</tr>
 	<tr>
